Fixed docker's files

--- a/learnpython/Dockerfile
+++ b/learnpython/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.13.5-slim-bookworm
 ENV PYTHONDONTWRITEBYTECODE 1
-WORKDIR /app
+WORKDIR /learnpython
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
