--- a/learnpython/requirements.txt
+++ b/learnpython/requirements.txt
@@ -1,7 +1,13 @@
+asarPy==1.0.1
 asgiref==3.11.0
 Django==6.0
 django-crispy-bootstrap==0.1.1.1
 django-crispy-forms==1.14.0
-sqlparse==0.5.5
-gunicorn==23.0.0
 gevent==25.9.1
+greenlet==3.3.0
+gunicorn==23.0.0
+packaging==25.0
+psycopg2-binary==2.9.11
+sqlparse==0.5.5
+zope.event==6.1
+zope.interface==8.2
