--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
  web:
   build: ./learnpython
-  command: python manage.py runserver 0.0.0.0:8000
+  command: gunicorn course.wsgi:application --bind 0.0.0.0:8000
   volumes:
     - ./learnpython:/usr/www/learnpython/
-  ports:
-    - 8000:8000
+  expose:
+    - 8000
   env_file:
     - ./.env.dev
   depends_on:
@@ -18,5 +18,12 @@ services:
     - POSTGRES_USER=fir
     - POSTGRES_PASSWORD=uggtiueblantvar
     - POSTGRES_DB=learnpython
+ nginx:
+   build: ./nginx
+   ports:
+     - 1337:80
+   depends_on:
+     - web
+
 volumes:
   postgres_data:
