--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG =1
 SECRET_KEY =django-insecure-bvnh=uc@dgeea+%knu%4x_7^#h8-pd9kc=#rsh=na$0ds6g2dq
-DJANGO_ALLOWED_HOSTS =localhost 127.0.0.1 192.168.50.250 176.111.253.102 [::1]
+DJANGO_ALLOWED_HOSTS = *
 EMAIL_HOST_PASSWORD =ehxe ygxj bkhq psjo
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=learnpython
